# python-project-lvl4

./: .env  .env.example  .gitignore  .travis.yml  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py  views.py
task_manager/templates/task_manager/: header.html  main.html
tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: statuses.json  tags.json
tasks/migrations/: 0001_initial.py  0002_auto_20200324_2224.py  0003_auto_20200325_2317.py  0004_auto_20200326_0012.py
tasks/templates/status/: task_status_create.html  task_status_edit.html  task_status_list.html
tasks/templates/tags/: tag_create.html  tag_edit.html  tag_list.html
tasks/templates/tasks/: filters.html  task_create.html  task_edit.html  task_list.html
users/: forms.py  urls.py  views.py
users/templates/users/: signup.html
