[tool.poetry]
name = "lelikov-task_manager"
version = "0.1.1"
description = ""
authors = ["Alexandr Lelikov <lelikovas@gmail.com>"]
packages = [{ include = "task_manager" }]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.4"
rollbar = "^0.14.7"
django-bootstrap4 = "^1.1.1"
django-fa = "^1.0.0"
python-dotenv = "^0.12.0"
dj-database-url = "^0.5.0"
whitenoise = "^5.0.1"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
